test/spec_vectors/i32/fail/module_51.wat
(module (memory 0) (func $type-binary-1st-operand-empty-in-load (i32.load (i32.add)) (drop)))